--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           id="navbarNavAltMarkup"
         >
           <div class="navbar-nav">
-            <a class="nav-item nav-link" id="home" href="#">Home</a>
+            <a class="nav-item nav-link" id="top" href="#">Home</a>
             <a class="nav-item nav-link" href="#">Products</a>
             <a class="nav-item nav-link" href="#">About Us</a>
             <a class="nav-item nav-link" href="#contact">Contact Us</a>
@@ -309,7 +309,7 @@
     </div>
     <div class="container">
       <footer class="d-flex justify-content-between">
-        <a href="#home">TOP &uarr;</a>
+        <a href="#top">TOP &uarr;</a>
         <p>&copy; 2020. All Right Reserved Hot Gadgets.</p>
       </footer>
     </div>
